se creo esquema y top-bar

--- a/partials/reset.css
+++ b/partials/reset.css
@@ -52,61 +52,4 @@ table {
   border-spacing: 0;
 }
 
-html {
-  font-size: 9px;
-}
-
-.top-header {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-  height: 1.25em;
-  width: 100%;
-  background: #62b9ff;
-  background: linear-gradient(90deg, #62b9ff 48%, #1c3680 100%);
-  color: white;
-}
-.top-header__container {
-  height: 100%;
-  margin: 0 0.5em;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-}
-.top-header__contact-info {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 0.4375em;
-  color: white;
-  height: 100%;
-}
-.top-header__contact-info a {
-  color: white;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-.top-header__contact-info li {
-  margin-right: 0.625em;
-}
-.top-header__icon {
-  width: 1em;
-  height: 1em;
-  margin: 0.3125em;
-}
-.top-header__icon path {
-  fill: white;
-}
-.top-header__icon--envelope {
-  width: 1.2em;
-  height: 1.2em;
-}
-.top-header__icon--instagram {
-  width: 1.1em;
-  height: 1.1em;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=reset.css.map */
