--- a/partials/reset.css
+++ b/partials/reset.css
@@ -52,4 +52,14 @@ table {
   border-spacing: 0;
 }
 
+button, input[type=submit], input[type=reset] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 /*# sourceMappingURL=reset.css.map */
