--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -1,23 +1,39 @@
 
-html {
-    // tamaño movil
-    font-size:9px;
+body {
+    font-family: 'Montserrat', sans-serif;
 }
+
+.container {
+    // Espacio de dos lados del contenedor
+    margin: 0 11px;
+}
+
+
+
+.header {
+    position:fixed;
+    top:0;
+    right:0;
+    left:0;
+}
+.top-header {
+    font-size:23px;
+}
+
 .top-header {
     font-family: 'Open Sans', sans-serif;
     font-weight:600;
-    height: em(20px);
     width:100%;
     @include gradiente;
     color:white;
     &__container {
         height:100%;
-        margin: 0 0.5em;
         display:flex;
         flex-direction:row;
         flex-wrap:nowrap;
         justify-content: space-between;
         align-items: center;
+        padding:em(3px) 0;
     }
     &__contact-info {
         display:flex;
@@ -37,6 +53,10 @@ html {
         li {
             margin-right:em(10px);
         }
+        // selecciona el li del icono de instagram
+        &--last li:nth-child(3){
+            margin-right: 0;
+        }
 
     }
     &__icon {
@@ -53,6 +73,51 @@ html {
         &--instagram {
             width:1.1em;
             height:1.1em;
+            margin:0;
         }
     }
 }
+
+.main-header {
+    font-weight:600;
+    background:rgba(245,245,245,1);
+    height:em(50px);
+    -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);
+    -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);
+    box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);
+    &__logo {
+        img {
+            height:em(68px);
+            position:absolute;
+            top:0;
+            left:-11px;
+        }
+    }
+    &__container {
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items:center;
+        height:em(50px);
+        position:relative;
+    }
+    &__button {
+        font-size: em(14px);
+        background:none;
+        height:70%;
+        border-left: 1px solid rgba(0,0,0,0.16);
+        color: rgba(0,0,0,0.8);
+        padding: 0 0 0 em(20px);
+        display:flex;
+        flex-wrap: nowrap;
+        align-items:center;
+        // padding: em(12px) em(17px);
+        // -webkit-box-shadow: 5px 6px 5px 0px rgba(0,0,0,0.22);
+        // -moz-box-shadow: 5px 6px 5px 0px rgba(0,0,0,0.22);
+        // box-shadow: 5px 6px 5px 0px rgba(0,0,0,0.22);
+    }
+    .menu-wrapper {
+        margin-left: em(8px);
+    }
+}
+
