--- a/style.css
+++ b/style.css
@@ -52,14 +52,38 @@ table {
   border-spacing: 0;
 }
 
-html {
-  font-size: 9px;
+button, input[type=submit], input[type=reset] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  margin: 0 11px;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+.top-header {
+  font-size: 23px;
 }
 
 .top-header {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
-  height: 1.25em;
   width: 100%;
   background: #62b9ff;
   background: linear-gradient(90deg, #62b9ff 48%, #1c3680 100%);
@@ -67,12 +91,12 @@ html {
 }
 .top-header__container {
   height: 100%;
-  margin: 0 0.5em;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  padding: 0.1875em 0;
 }
 .top-header__contact-info {
   display: flex;
@@ -92,6 +116,9 @@ html {
 .top-header__contact-info li {
   margin-right: 0.625em;
 }
+.top-header__contact-info--last li:nth-child(3) {
+  margin-right: 0;
+}
 .top-header__icon {
   width: 1em;
   height: 1em;
@@ -107,6 +134,97 @@ html {
 .top-header__icon--instagram {
   width: 1.1em;
   height: 1.1em;
+  margin: 0;
+}
+
+.main-header {
+  font-weight: 600;
+  background: whitesmoke;
+  height: 3.125em;
+  -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+}
+.main-header__logo img {
+  height: 4.25em;
+  position: absolute;
+  top: 0;
+  left: -11px;
+}
+.main-header__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 3.125em;
+  position: relative;
+}
+.main-header__button {
+  font-size: 0.875em;
+  background: none;
+  height: 70%;
+  border-left: 1px solid rgba(0, 0, 0, 0.16);
+  color: rgba(0, 0, 0, 0.8);
+  padding: 0 0 0 1.25em;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.main-header .menu-wrapper {
+  margin-left: 0.5em;
+}
+
+.menu-wrapper {
+  height: 11px;
+  cursor: pointer;
+}
+
+.hamburger-menu,
+.hamburger-menu:after,
+.hamburger-menu:before {
+  width: 15px;
+  height: 2px;
+}
+
+.hamburger-menu {
+  position: relative;
+  transform: translateY(5px);
+  background: gray;
+  transition: all 0ms 300ms;
+}
+
+.hamburger-menu.animate {
+  background: rgba(255, 255, 255, 0);
+}
+
+.hamburger-menu:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 5px;
+  background: gray;
+  transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.hamburger-menu:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 5px;
+  background: gray;
+  transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.hamburger-menu.animate:after {
+  top: 0;
+  transform: rotate(45deg);
+  transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.hamburger-menu.animate:before {
+  bottom: 0;
+  transform: rotate(-45deg);
+  transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 /*# sourceMappingURL=style.css.map */
