--- a/sass/partials/variables.scss
+++ b/sass/partials/variables.scss
@@ -1,6 +1,10 @@
 $azul:#1C3680;
-$azul-claro:#004E93;
+$azul-claro:rgb(98,185,255);
 $color-icono-menu : gray;
+$negro: rgba(0,0,0,0.16);
+$negro-medio:rgba(0,0,0,0.65);
+$negro-oscuro: rgba(0,0,0,0.8);
+$blanco: rgba(245,245,245,1);
 
 @function em($size) {
     $emSize: $size / 16px;
