--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import'partials/variables';
 @import'partials/reset';
 @import'partials/main';
+@import'partials/tablet';
 @import'partials/hamb-icon';
 
