--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ body {
 }
 
 .container {
-  margin: 0 0.6875em;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .header {
@@ -185,12 +186,12 @@ body {
 }
 
 .banner {
-  margin-top: 5em;
+  margin-top: 80px;
   z-index: 0;
   background: black;
   box-sizing: border-box;
 }
-.banner__image {
+.banner__imagen {
   height: 100%;
   width: 100%;
   opacity: 0.8;
@@ -201,7 +202,11 @@ body {
   color: white;
   background: #1C3680;
   margin: 0;
-  padding: 1.5625em 0.6875em;
+  padding: 1.5625em 14px;
+}
+.banner__descripcion {
+  display: none;
+  font-size: 0.625em;
 }
 
 .servicios {
@@ -209,7 +214,7 @@ body {
   background: #62b9ff;
   background: linear-gradient(90deg, #62b9ff 48%, #1c3680 100%);
   color: white;
-  padding: 0.9375em 0.6875em;
+  padding: 0.9375em 0;
 }
 .servicios__contenedor {
   display: flex;
@@ -281,9 +286,7 @@ body {
 }
 
 .destacados {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 40px 0;
 }
 .destacados__titulo-seccion {
   color: rgba(0, 0, 0, 0.8);
@@ -291,7 +294,7 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   text-align: center;
-  padding: 40px 0 35px 0;
+  padding: 0 0 35px 0;
 }
 .destacados__titulo-seccion::after {
   content: "";
@@ -301,6 +304,11 @@ body {
   display: block;
   margin: 0 auto;
   margin-top: 0.625em;
+}
+.destacados__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .propiedad {
@@ -313,6 +321,9 @@ body {
   -moz-box-shadow: 7px 7px 5px 0px rgba(0, 0, 0, 0.18);
   box-shadow: 7px 7px 5px 0px rgba(0, 0, 0, 0.18);
   background: white;
+}
+.propiedad--last {
+  margin-bottom: 0;
 }
 .propiedad__contenedor-imagen {
   height: 100%;
@@ -401,14 +412,17 @@ body {
 .tasaciones {
   background: #1C3680;
   color: white;
+  font-size: 0.8125em;
+  padding: 1.0625em 0;
+}
+.tasaciones__contenedor {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   height: 5.3125em;
-  font-size: 0.8125em;
-  padding: 1.0625em 20px;
+  max-width: 490px;
 }
-.tasaciones__contenedor {
+.tasaciones__contenido {
   display: flex;
   flex-direction: column;
   margin-left: 1.25em;
@@ -431,13 +445,12 @@ body {
 
 .footer {
   background: rgba(0, 0, 0, 0.8);
-  padding: 0 1.5625em;
 }
 
 .contacto {
   color: rgba(255, 255, 255, 0.8);
   font-family: "Open Sans", sans-serif;
-  padding: 2.5em 0 0 0;
+  padding: 2.5em 2.1875em 0 2.1875em;
 }
 .contacto__titulo {
   font-size: 1.1875em;
@@ -452,7 +465,7 @@ body {
   fill: rgba(255, 255, 255, 0.8);
 }
 .contacto__descripcion {
-  font-size: 0.8125em;
+  font-size: 0.75em;
   padding: 1.5625em 0 1.875em 0;
 }
 .contacto__info {
@@ -469,10 +482,12 @@ body {
 }
 
 .copyright {
+  font-family: "Open Sans", sans-serif;
   color: rgba(255, 255, 255, 0.8);
   font-size: 0.6875em;
   text-align: center;
   border-top: 1px solid rgba(255, 255, 255, 0.8);
+  margin: 0 14px;
   padding: 1.5625em 0;
 }
 .copyright a {
@@ -481,6 +496,94 @@ body {
   text-decoration: none;
 }
 
+@media (min-width: 768px) {
+  .banner {
+    font-size: 1.6em;
+  }
+
+  .servicios {
+    font-size: 1.1em;
+  }
+
+  .top-header {
+    font-size: 28px;
+  }
+
+  .main-header {
+    font-size: 19px;
+  }
+
+  .tasaciones {
+    font-size: 0.9375em;
+  }
+
+  .banner {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .banner__imagen {
+    opacity: 0.65;
+  }
+  .banner__info {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    padding: 0 2.8125em;
+  }
+  .banner__titulo {
+    background: none;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    color: white;
+  }
+  .banner__descripcion {
+    margin-top: 1.875em;
+    display: inline-block;
+    color: white;
+    width: 50%;
+    align-self: flex-end;
+    padding-left: 1.875em;
+    border-left: 1px solid white;
+  }
+
+  .servicios__contenedor {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .servicios__elemento {
+    width: 15.5%;
+  }
+
+  .destacados__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .propiedad {
+    flex-basis: 49%;
+  }
+
+  .tasaciones {
+    height: 4.0625em;
+    display: flex;
+    align-items: center;
+  }
+  .tasaciones__contenedor {
+    max-width: 700px;
+  }
+  .tasaciones__imagen {
+    height: 130%;
+  }
+
+  .contacto {
+    width: 30%;
+  }
+}
 .menu-wrapper {
   height: 11px;
   cursor: pointer;
