--- a/partials/tablet.css
+++ b/partials/tablet.css
@@ -1,90 +1,150 @@
 /* Error: Undefined mixin.
- *    ,
- * 1  | / @include mq('lg') {
- * 2  | |     // Cambiar tamaños en estas lineas
- * 3  | |     .banner {
- * 4  | |         font-size: 1.6em;
- * 5  | |     }
- * 6  | |     .servicios {
- * 7  | |         font-size: 1.1em;
- * 8  | |     }
- * 9  | |     .top-header {
- * 10 | |         font-size:28px;
- * 11 | |     }
- * 12 | |     .main-header {
- * 13 | |         font-size:19px;
- * 14 | |     }
- * 15 | |     .tasaciones {
- * 16 | |         font-size: em(15px);
- * 17 | |     }
- * 18 | |     // Fin tamaños
- * 19 | |     .banner {
- * 20 | |         position:relative;
- * 21 | |         display:flex;
- * 22 | |         align-items: center;
- * 23 | |         justify-content: center;
- * 24 | |         &__imagen {
- * 25 | |             opacity:0.65;
- * 26 | |         }
- * 27 | |         &__info {
- * 28 | |             position:absolute;
- * 29 | |             display:flex;
- * 30 | |             flex-direction: column;
- * 31 | |             padding:0 em(45px);
- * 32 | |         }
- * 33 | |         &__titulo {
- * 34 | |             background:none;
- * 35 | |             display:inline-block;
- * 36 | |             padding:0;
- * 37 | |             margin:0;
- * 38 | |             color:white;
- * 39 | |         }
- * 40 | |         &__descripcion {
- * 41 | |             margin-top:em(30px);
- * 42 | |             display:inline-block;
- * 43 | |             color:white;
- * 44 | |             width:50%;
- * 45 | |             align-self:flex-end;
- * 46 | |             padding-left: em(30px);
- * 47 | |             border-left: 1px solid white;
- * 48 | |         }
- * 49 | |     }
- * 50 | |     .servicios {
- * 51 | |         &__contenedor {
- * 52 | |             flex-direction: row;
- * 53 | |             flex-wrap:nowrap;
- * 54 | |         }
- * 55 | |         &__elemento {
- * 56 | |             width:15.5%;
- * 57 | |         }
- * 58 | |     }
- * 59 | |     .destacados {
- * 60 | |         &__container {
- * 61 | |             display:flex;
- * 62 | |             flex-direction:row;
- * 63 | |             flex-wrap:wrap;
- * 64 | |             justify-content: space-between;
- * 65 | |         }
- * 66 | |     }
- * 67 | |     .propiedad {
- * 68 | |         flex-basis:49%;
- * 69 | |     }
- * 70 | |     .tasaciones {
- * 71 | |         height: em(65px);
- * 72 | |         display:flex;
- * 73 | |         align-items: center;
- * 74 | |         &__contenedor {
- * 75 | |             max-width:700px;   
- * 76 | |         }
- * 77 | |         &__imagen {
- * 78 | |             height:130%;
- * 79 | |         }
- * 80 | |     }
- * 81 | |     .contacto {
- * 82 | |         width:30%;
- * 83 | |     }
- * 84 | \ }
- *    '
+ *     ,
+ * 1   | / @include mq('lg') {
+ * 2   | |     // Cambiar tamaños en estas lineas
+ * 3   | |     .banner {
+ * 4   | |         font-size: 1.6em;
+ * 5   | |     }
+ * 6   | |     .servicios {
+ * 7   | |         font-size: 1.1em;
+ * 8   | |     }
+ * 9   | |     .top-header {
+ * 10  | |         font-size:28px;
+ * 11  | |     }
+ * 12  | |     .main-header {
+ * 13  | |         font-size:19px;
+ * 14  | |     }
+ * 15  | |     .tasaciones {
+ * 16  | |         font-size: em(15px);
+ * 17  | |     }
+ * 18  | |     // Fin tamaños
+ * 19  | |     .banner {
+ * 20  | |         position:relative;
+ * 21  | |         display:flex;
+ * 22  | |         align-items: center;
+ * 23  | |         justify-content: center;
+ * 24  | |         &__imagen {
+ * 25  | |             opacity:0.65;
+ * 26  | |         }
+ * 27  | |         &__info {
+ * 28  | |             position:absolute;
+ * 29  | |             display:flex;
+ * 30  | |             flex-direction: column;
+ * 31  | |             padding:0 em(45px);
+ * 32  | |         }
+ * 33  | |         &__titulo {
+ * 34  | |             background:none;
+ * 35  | |             display:inline-block;
+ * 36  | |             padding:0;
+ * 37  | |             margin:0;
+ * 38  | |             color:white;
+ * 39  | |         }
+ * 40  | |         &__descripcion {
+ * 41  | |             margin-top:em(30px);
+ * 42  | |             display:inline-block;
+ * 43  | |             color:white;
+ * 44  | |             width:50%;
+ * 45  | |             align-self:flex-end;
+ * 46  | |             padding-left: em(30px);
+ * 47  | |             border-left: 1px solid white;
+ * 48  | |         }
+ * 49  | |     }
+ * 50  | |     .servicios {
+ * 51  | |         &__contenedor {
+ * 52  | |             flex-direction: row;
+ * 53  | |             flex-wrap:nowrap;
+ * 54  | |         }
+ * 55  | |         &__elemento {
+ * 56  | |             width:15.5%;
+ * 57  | |         }
+ * 58  | |     }
+ * 59  | |     .destacados {
+ * 60  | |         &__container {
+ * 61  | |             display:flex;
+ * 62  | |             flex-direction:row;
+ * 63  | |             flex-wrap:wrap;
+ * 64  | |             justify-content: space-between;
+ * 65  | |         }
+ * 66  | |     }
+ * 67  | |     .propiedad {
+ * 68  | |         flex-basis:49%;
+ * 69  | |     }
+ * 70  | |     .tasaciones {
+ * 71  | |         height: em(65px);
+ * 72  | |         display:flex;
+ * 73  | |         align-items: center;
+ * 74  | |         &__contenedor {
+ * 75  | |             max-width:700px;   
+ * 76  | |         }
+ * 77  | |         &__imagen {
+ * 78  | |             height:130%;
+ * 79  | |         }
+ * 80  | |     }
+ * 81  | |     .contacto {
+ * 82  | |         width:30%;
+ * 83  | |     }
+ * 84  | | 
+ * 85  | |     .navegacion {
+ * 86  | |         display:flex;
+ * 87  | |         background:none;
+ * 88  | |         position:relative;
+ * 89  | |         top:0;
+ * 90  | |         right:0;
+ * 91  | |         border:none;
+ * 92  | |         padding:0;
+ * 93  | |         margin:0;
+ * 94  | |         width: auto;
+ * 95  | |         &__contenedor {
+ * 96  | |             display:flex;
+ * 97  | |             flex-direction:row;
+ * 98  | |             align-items: center;
+ * 99  | |             flex-wrap:nowrap;
+ * 100 | |             @include gradiente;
+ * 101 | |             font-size:em(13px);
+ * 102 | |             padding:0;
+ * 103 | |             margin:0;
+ * 104 | |             &::before {
+ * 105 | |                 content:"";
+ * 106 | |                 width: 0;
+ * 107 | |                 height: 0;
+ * 108 | |                 border-style: solid;
+ * 109 | |                 border-width: 0 0 em(35px) em(35px);
+ * 110 | |                 border-color: transparent transparent rgba(98,185,255,1) transparent;
+ * 111 | |                 transform: translateX(-99%);
+ * 112 | |             }
+ * 113 | |         }
+ * 114 | |         &__link {
+ * 115 | |             text-decoration:none;
+ * 116 | |             color:white;
+ * 117 | |             padding: em(11px) em(25px);
+ * 118 | |             border-right:1px solid rgba(255,255,255,0.3);
+ * 119 | |         }
+ * 120 | |         &__elemento {
+ * 121 | |             display:flex;
+ * 122 | |             justify-content: center;
+ * 123 | |             margin:0;
+ * 124 | |             padding:0;
+ * 125 | |             font-size: em(12px);
+ * 126 | |             display:flex;
+ * 127 | |             justify-content: center;
+ * 128 | |             flex-direction:row;
+ * 129 | |             border:none;
+ * 130 | |             width:auto;
+ * 131 | |             &--first {
+ * 132 | |                 margin-top: 0;
+ * 133 | |                 justify-content: flex-start;
+ * 134 | |             }
+ * 135 | |             &:nth-child(2n) {
+ * 136 | |                 background: none;
+ * 137 | |             }
+ * 138 | |             
+ * 139 | |         }
+ * 140 | |     }
+ * 141 | |     .main-header__button {
+ * 142 | |         display:none;
+ * 143 | |     }
+ * 144 | \ }
+ *     '
  *   sass/partials/tablet.scss 1:1  root stylesheet */
 
 body::before {
@@ -95,5 +155,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a    \2577 \a 1  \2502  \250c  @include mq('lg') {\a 2  \2502  \2502      // Cambiar tamaños en estas lineas\a 3  \2502  \2502      .banner {\a 4  \2502  \2502          font-size: 1.6em;\a 5  \2502  \2502      }\a 6  \2502  \2502      .servicios {\a 7  \2502  \2502          font-size: 1.1em;\a 8  \2502  \2502      }\a 9  \2502  \2502      .top-header {\a 10 \2502  \2502          font-size:28px;\a 11 \2502  \2502      }\a 12 \2502  \2502      .main-header {\a 13 \2502  \2502          font-size:19px;\a 14 \2502  \2502      }\a 15 \2502  \2502      .tasaciones {\a 16 \2502  \2502          font-size: em(15px);\a 17 \2502  \2502      }\a 18 \2502  \2502      // Fin tamaños\a 19 \2502  \2502      .banner {\a 20 \2502  \2502          position:relative;\a 21 \2502  \2502          display:flex;\a 22 \2502  \2502          align-items: center;\a 23 \2502  \2502          justify-content: center;\a 24 \2502  \2502          &__imagen {\a 25 \2502  \2502              opacity:0.65;\a 26 \2502  \2502          }\a 27 \2502  \2502          &__info {\a 28 \2502  \2502              position:absolute;\a 29 \2502  \2502              display:flex;\a 30 \2502  \2502              flex-direction: column;\a 31 \2502  \2502              padding:0 em(45px);\a 32 \2502  \2502          }\a 33 \2502  \2502          &__titulo {\a 34 \2502  \2502              background:none;\a 35 \2502  \2502              display:inline-block;\a 36 \2502  \2502              padding:0;\a 37 \2502  \2502              margin:0;\a 38 \2502  \2502              color:white;\a 39 \2502  \2502          }\a 40 \2502  \2502          &__descripcion {\a 41 \2502  \2502              margin-top:em(30px);\a 42 \2502  \2502              display:inline-block;\a 43 \2502  \2502              color:white;\a 44 \2502  \2502              width:50%;\a 45 \2502  \2502              align-self:flex-end;\a 46 \2502  \2502              padding-left: em(30px);\a 47 \2502  \2502              border-left: 1px solid white;\a 48 \2502  \2502          }\a 49 \2502  \2502      }\a 50 \2502  \2502      .servicios {\a 51 \2502  \2502          &__contenedor {\a 52 \2502  \2502              flex-direction: row;\a 53 \2502  \2502              flex-wrap:nowrap;\a 54 \2502  \2502          }\a 55 \2502  \2502          &__elemento {\a 56 \2502  \2502              width:15.5%;\a 57 \2502  \2502          }\a 58 \2502  \2502      }\a 59 \2502  \2502      .destacados {\a 60 \2502  \2502          &__container {\a 61 \2502  \2502              display:flex;\a 62 \2502  \2502              flex-direction:row;\a 63 \2502  \2502              flex-wrap:wrap;\a 64 \2502  \2502              justify-content: space-between;\a 65 \2502  \2502          }\a 66 \2502  \2502      }\a 67 \2502  \2502      .propiedad {\a 68 \2502  \2502          flex-basis:49%;\a 69 \2502  \2502      }\a 70 \2502  \2502      .tasaciones {\a 71 \2502  \2502          height: em(65px);\a 72 \2502  \2502          display:flex;\a 73 \2502  \2502          align-items: center;\a 74 \2502  \2502          &__contenedor {\a 75 \2502  \2502              max-width:700px;   \a 76 \2502  \2502          }\a 77 \2502  \2502          &__imagen {\a 78 \2502  \2502              height:130%;\a 79 \2502  \2502          }\a 80 \2502  \2502      }\a 81 \2502  \2502      .contacto {\a 82 \2502  \2502          width:30%;\a 83 \2502  \2502      }\a 84 \2502  \2514  }\a    \2575 \a   sass/partials/tablet.scss 1:1  root stylesheet";
+  content: "Error: Undefined mixin.\a     \2577 \a 1   \2502  \250c  @include mq('lg') {\a 2   \2502  \2502      // Cambiar tamaños en estas lineas\a 3   \2502  \2502      .banner {\a 4   \2502  \2502          font-size: 1.6em;\a 5   \2502  \2502      }\a 6   \2502  \2502      .servicios {\a 7   \2502  \2502          font-size: 1.1em;\a 8   \2502  \2502      }\a 9   \2502  \2502      .top-header {\a 10  \2502  \2502          font-size:28px;\a 11  \2502  \2502      }\a 12  \2502  \2502      .main-header {\a 13  \2502  \2502          font-size:19px;\a 14  \2502  \2502      }\a 15  \2502  \2502      .tasaciones {\a 16  \2502  \2502          font-size: em(15px);\a 17  \2502  \2502      }\a 18  \2502  \2502      // Fin tamaños\a 19  \2502  \2502      .banner {\a 20  \2502  \2502          position:relative;\a 21  \2502  \2502          display:flex;\a 22  \2502  \2502          align-items: center;\a 23  \2502  \2502          justify-content: center;\a 24  \2502  \2502          &__imagen {\a 25  \2502  \2502              opacity:0.65;\a 26  \2502  \2502          }\a 27  \2502  \2502          &__info {\a 28  \2502  \2502              position:absolute;\a 29  \2502  \2502              display:flex;\a 30  \2502  \2502              flex-direction: column;\a 31  \2502  \2502              padding:0 em(45px);\a 32  \2502  \2502          }\a 33  \2502  \2502          &__titulo {\a 34  \2502  \2502              background:none;\a 35  \2502  \2502              display:inline-block;\a 36  \2502  \2502              padding:0;\a 37  \2502  \2502              margin:0;\a 38  \2502  \2502              color:white;\a 39  \2502  \2502          }\a 40  \2502  \2502          &__descripcion {\a 41  \2502  \2502              margin-top:em(30px);\a 42  \2502  \2502              display:inline-block;\a 43  \2502  \2502              color:white;\a 44  \2502  \2502              width:50%;\a 45  \2502  \2502              align-self:flex-end;\a 46  \2502  \2502              padding-left: em(30px);\a 47  \2502  \2502              border-left: 1px solid white;\a 48  \2502  \2502          }\a 49  \2502  \2502      }\a 50  \2502  \2502      .servicios {\a 51  \2502  \2502          &__contenedor {\a 52  \2502  \2502              flex-direction: row;\a 53  \2502  \2502              flex-wrap:nowrap;\a 54  \2502  \2502          }\a 55  \2502  \2502          &__elemento {\a 56  \2502  \2502              width:15.5%;\a 57  \2502  \2502          }\a 58  \2502  \2502      }\a 59  \2502  \2502      .destacados {\a 60  \2502  \2502          &__container {\a 61  \2502  \2502              display:flex;\a 62  \2502  \2502              flex-direction:row;\a 63  \2502  \2502              flex-wrap:wrap;\a 64  \2502  \2502              justify-content: space-between;\a 65  \2502  \2502          }\a 66  \2502  \2502      }\a 67  \2502  \2502      .propiedad {\a 68  \2502  \2502          flex-basis:49%;\a 69  \2502  \2502      }\a 70  \2502  \2502      .tasaciones {\a 71  \2502  \2502          height: em(65px);\a 72  \2502  \2502          display:flex;\a 73  \2502  \2502          align-items: center;\a 74  \2502  \2502          &__contenedor {\a 75  \2502  \2502              max-width:700px;   \a 76  \2502  \2502          }\a 77  \2502  \2502          &__imagen {\a 78  \2502  \2502              height:130%;\a 79  \2502  \2502          }\a 80  \2502  \2502      }\a 81  \2502  \2502      .contacto {\a 82  \2502  \2502          width:30%;\a 83  \2502  \2502      }\a 84  \2502  \2502  \a 85  \2502  \2502      .navegacion {\a 86  \2502  \2502          display:flex;\a 87  \2502  \2502          background:none;\a 88  \2502  \2502          position:relative;\a 89  \2502  \2502          top:0;\a 90  \2502  \2502          right:0;\a 91  \2502  \2502          border:none;\a 92  \2502  \2502          padding:0;\a 93  \2502  \2502          margin:0;\a 94  \2502  \2502          width: auto;\a 95  \2502  \2502          &__contenedor {\a 96  \2502  \2502              display:flex;\a 97  \2502  \2502              flex-direction:row;\a 98  \2502  \2502              align-items: center;\a 99  \2502  \2502              flex-wrap:nowrap;\a 100 \2502  \2502              @include gradiente;\a 101 \2502  \2502              font-size:em(13px);\a 102 \2502  \2502              padding:0;\a 103 \2502  \2502              margin:0;\a 104 \2502  \2502              &::before {\a 105 \2502  \2502                  content:\"\";\a 106 \2502  \2502                  width: 0;\a 107 \2502  \2502                  height: 0;\a 108 \2502  \2502                  border-style: solid;\a 109 \2502  \2502                  border-width: 0 0 em(35px) em(35px);\a 110 \2502  \2502                  border-color: transparent transparent rgba(98,185,255,1) transparent;\a 111 \2502  \2502                  transform: translateX(-99%);\a 112 \2502  \2502              }\a 113 \2502  \2502          }\a 114 \2502  \2502          &__link {\a 115 \2502  \2502              text-decoration:none;\a 116 \2502  \2502              color:white;\a 117 \2502  \2502              padding: em(11px) em(25px);\a 118 \2502  \2502              border-right:1px solid rgba(255,255,255,0.3);\a 119 \2502  \2502          }\a 120 \2502  \2502          &__elemento {\a 121 \2502  \2502              display:flex;\a 122 \2502  \2502              justify-content: center;\a 123 \2502  \2502              margin:0;\a 124 \2502  \2502              padding:0;\a 125 \2502  \2502              font-size: em(12px);\a 126 \2502  \2502              display:flex;\a 127 \2502  \2502              justify-content: center;\a 128 \2502  \2502              flex-direction:row;\a 129 \2502  \2502              border:none;\a 130 \2502  \2502              width:auto;\a 131 \2502  \2502              &--first {\a 132 \2502  \2502                  margin-top: 0;\a 133 \2502  \2502                  justify-content: flex-start;\a 134 \2502  \2502              }\a 135 \2502  \2502              &:nth-child(2n) {\a 136 \2502  \2502                  background: none;\a 137 \2502  \2502              }\a 138 \2502  \2502              \a 139 \2502  \2502          }\a 140 \2502  \2502      }\a 141 \2502  \2502      .main-header__button {\a 142 \2502  \2502          display:none;\a 143 \2502  \2502      }\a 144 \2502  \2514  }\a     \2575 \a   sass/partials/tablet.scss 1:1  root stylesheet";
 }
