--- a/sass/partials/variables.scss
+++ b/sass/partials/variables.scss
@@ -5,6 +5,7 @@ $negro: rgba(0,0,0,0.16);
 $negro-medio:rgba(0,0,0,0.65);
 $negro-oscuro: rgba(0,0,0,0.8);
 $blanco: rgb(245,245,245);
+$blanco-oscuro: #e6e6e6;
 $gris: rgba(255,255,255,0.8);
 
 @function em($size) {
@@ -18,7 +19,7 @@ $gris: rgba(255,255,255,0.8);
 }
 
 // media queries
-$breakpoints:( 'sm':576px, 'lg':768px, 'xl':1124px, 'xxl':1380px );
+$breakpoints:( 'sm':576px, 'lg':768px, 'xl':1024px, 'xxl':1380px );
 @mixin mq($break) {
     $value: map-get($breakpoints, $break);
     $sm: map-get($breakpoints, 'sm');
