--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,5 +2,6 @@
 @import'partials/reset';
 @import'partials/main';
 @import'partials/tablet';
+@import'partials/laptop';
 @import'partials/hamb-icon';
 
