--- a/style.css
+++ b/style.css
@@ -724,6 +724,64 @@ body {
     flex-basis: 23%;
   }
 }
+@media (min-width: 1025px) {
+  .banner {
+    font-size: 2em;
+  }
+
+  .servicios {
+    font-size: 1.1em;
+  }
+
+  .top-header {
+    font-size: 28px;
+  }
+
+  .main-header {
+    font-size: 21px;
+  }
+
+  .tasaciones {
+    font-size: 0.9375em;
+  }
+
+  .container {
+    width: 100%;
+    max-width: 980px;
+    margin: 0 auto;
+  }
+
+  .main-header {
+    font-weight: 600;
+    background: whitesmoke;
+    height: auto;
+    -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+    -moz-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.16);
+  }
+  .main-header__logo img {
+    height: 3.4375em;
+    position: relative;
+    transform: translateX(-7%);
+  }
+  .main-header__container {
+    height: auto;
+  }
+
+  .banner {
+    margin-top: 0;
+    height: 100vh;
+  }
+  .banner__info {
+    max-width: 980px;
+  }
+  .banner__titulo {
+    padding: 0;
+  }
+  .banner__descripcion {
+    font-size: 0.5625em;
+  }
+}
 .menu-wrapper {
   height: 11px;
   cursor: pointer;
